LinKreta_POC_Repository/force-app/main/default/objects/AccountTeamMember/fields/CslCO_Csl__c.field-meta.xml
<CustomField>
    <fullName>CslCO_Csl__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CslCO-Csl</label>
    <type>Checkbox</type>
</CustomField>