LinKreta_POC_Repository/force-app/main/default/objects/AccountTeamMember/fields/System_Deletion__c.field-meta.xml
<CustomField>
    <fullName>System_Deletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Deletion</label>
    <type>Checkbox</type>
</CustomField>